src/css/index.css
* {
  margin: 0;
  padding: 0;
}
#root {
  height: 100%;
}
.centralize {
  text-align: center;
}
.App {
  height: 100%;
  display: grid;
  grid-template-rows: [row--topmost] auto [row--header_to_main] 1fr [row--main_to_footer] auto [row--bottommost];
  grid-template-columns: [col--leftmost] auto [col2] 1fr [col--main_to_sidebar] auto [col--rightmost];
}
.signup--button {
  background-color: #2020ff;
  color: #e0e0e0;
  text-align: center;
}
html,
body {
  /* height 100% required to push down footer */
  width: 100%;
  height: 100%;
  background-color: #252525;
  color: #e0e0e0;
  font-size: 16px;
}
.Header {
  grid-column: 1 / 4;
  background-color: #252525;
  /* display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: auto auto auto; */
}
.hamburger {
  font-family: sans-serif;
}
.header--logo {
  font-family: fantasy;
}
.header__left {
  grid-row: row--topmost / row--header_to_main;
  grid-column: col--leftmost / col2;
  text-align: left;
}
.header__middle {
  grid-row: row--topmost / row--header_to_main;
  grid-column: col2 / col--main_to_sidebar;
  text-align: center;
}
.header__right {
  grid-row: row--topmost / row--header_to_main;
  grid-column: col--main_to_sidebar / col--rightmost;
  text-align: center;
}
.Nav {
  grid-column: col--main_to_sidebar / col--rightmost;
  background-color: #252525;
  text-align: center;
}
.corefunc {
  grid-row: row--header_to_main / row--main_to_footer;
  grid-column: col--leftmost / col--main_to_sidebar;
}
.Main {
  /* grid-column: 1 / 3; */
  background-color: #404040;
}
.Footer {
  grid-column: 1 / 4;
  background-color: #252525;
}
.Article {
  margin: 8px;
  padding: 4px;
  background-color: #505050;
}
.nav__featuredPosts {
  max-width: 128px;
}
span {
  margin: 4px;
}
button,
.input--button,
.input--file {
  padding: 4px;
  background-color: #252525;
  color: #e0e0e0;
}
ul {
  list-style-position: outside;
  list-style-type: none;
}
em,
i {
  font-style: italic;
}
strong,
b {
  font-weight: bold;
}
a {
  color: gold;
}

/* Default CSS below */

/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
} */

